--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -2,14 +2,11 @@ package layout
 
 templ Base(title string) {
 	<!DOCTYPE html>
-	<html lang="en" data-theme="dark" class="dark">
+	<html lang="en" data-theme="" class="dark">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<meta
-				name="description"
-				content="Harish Portfolio"
-			/>
+			<meta name="description" content="Harish Portfolio"/>
 			<meta name="google" content="notranslate"/>
 			<link rel="stylesheet" href="/css/styles.css"/>
 			<link rel="stylesheet" href="/css/static.css"/>
@@ -21,20 +18,17 @@ templ Base(title string) {
 			<script defer src="https://unpkg.com/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
 			<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 			<script>
-                /* Script to toggle light and  mode */
+                /* Script to toggle light and dark mode */
             </script>
-			// <script src="/js/confirm.js" defer></script>
 			<script type="module" src="/js/launch.js"></script>
 		</head>
 		<body hx-boost="true" class="dark:bg-terminal-base font-mono text-white leading-normal tracking-tighter">
-			<layout id="layout" class="w-screen bg-terminal-base h-screen flex flex-col">
-				<header class="bg-primary-500 flex justify-between items-center py-1">
+			<div id="layout" class="w-full min-h-screen bg-terminal-base flex flex-col">
+				<header class="bg-primary-500 flex flex-row justify-between items-center">
 					<div class="flex space-x-4">
-						<button hx-get="/" hx-target="body" hx-swap="innerHTML transition:true" class="text-white font-bold tracking-tight btn btn-ghost hover:bg-primary-400 ">home</button>
-						<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost  hover:bg-primary-400">readme</button>
-						<button hx-get="/project" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost  hover:bg-primary-400">
-							projects
-						</button>
+						<button hx-get="/" hx-target="body" hx-swap="innerHTML transition:true" class="text-white font-bold tracking-tight btn btn-ghost hover:bg-primary-400">home</button>
+						<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary-400">readme</button>
+						<button hx-get="/project" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary-400">projects</button>
 						<button hx-get="/blog" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white disabled">blog <span class="text-xs">(coming soon)</span></button>
 					</div>
 					<div class="flex items-center space-x-2">
@@ -42,66 +36,42 @@ templ Base(title string) {
 						<a href="https://github.com/harish876" class="text-white btn btn-ghost btn-xs">Github</a>
 					</div>
 				</header>
-				<div id="commandDisplay" class="flex flex-col h-screen flex-grow px-4 py-8 text-xl bg-terminal-base">
+				<main id="commandDisplay" class="flex flex-col flex-grow mt-8 md:mt-4 px-4 py-8 text-lg bg-terminal-base">
 					{ children... }
-				</div>
-				<div
-					class="py-8 group flex h-8 items-center bg-terminal-base hover:bg-terminal-hover"
-				>
+				</main>
+				<div class="py-4 flex items-center bg-terminal-base hover:bg-terminal-hover px-4">
 					<div class="bg-primary-400 w-[2px] h-[30px] shrink-0 animate-blink"></div>
-					<form
-						hx-post="/commands"
-						hx-indicator="#spinner"
-						hx-target="#commandDisplay"
-						hx-swap="innerHTML transition:true"
-						hx-on::after-request="this.reset()"
-					>
-						<input
-							name="command"
-							id="commandBox"
-							type="text"
-							autocomplete="off"
-							placeholder="$ enter command here"
-							class="px-4 border-none focus:ring-transparent text-white leading-tight bg-transparent"
-						/>
+					<form hx-post="/commands" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="innerHTML transition:true" hx-on::after-request="this.reset()" class="flex-grow">
+						<input name="command" id="commandBox" type="text" autocomplete="off" placeholder="$ enter command here" class="w-full px-4 border-none focus:ring-transparent text-white leading-tight bg-transparent"/>
 					</form>
 				</div>
-				//Todo: refactor to a footer component
-				<footer class="bg-primary-500 flex flex-row justify-between items-center">
-					<div class="flex flex-row space-x-4">
+				<footer class="bg-primary-500 flex md:flex-row justify-between items-center">
+					<div class="flex md:flex-row sm:space-y-0 md:space-x-4">
 						<span id="currentText" class="bg-secondary-500 text-white px-2 text-sm">home.txt</span>
 						<span id="spinner" class="loading loading-infinity loading-sm htmx-indicator"></span>
 					</div>
-					<div class="flex flex-row space-x-4">
+					<div class="flex md:flex-row sm:space-y-0 md:space-x-4">
 						<span id="tabSize" class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">Ln 81, Col 122</span>
-						<span class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer tooltip" data-tip="htmx">htmx</span>
-						<span class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">templ</span>
-						<span id="tabSize" class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">Tab Size: 4</span>
+						<span class="hidden md:block text-white px-2 text-sm hover:bg-primary-400 cursor-pointer tooltip" data-tip="htmx">htmx</span>
+						<span class="hidden md:block text-white px-2 text-sm hover:bg-primary-400 cursor-pointer tooltip">templ</span>
+						<span id="tabSize" class="hidden md:block text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">Tab Size: 4</span>
 						<span id="errorText" class="bg-error-base text-white px-2 text-sm">Errors</span>
 					</div>
 				</footer>
-			</layout>
+			</div>
 			<script lang="js">
 			     document.body.addEventListener('htmx:beforeSwap', function(evt) {
-			    if(evt.detail.xhr.status === 404){
-			        // alert the user when a 404 occurs (maybe use a nicer mechanism than alert())
-			        alert("Error: Could Not Find Resource");
-			    } else if(evt.detail.xhr.status === 422){
-			        // allow 422 responses to swap as we are using this as a signal that
-			        // a form was submitted with bad data and want to rerender with the
-			        // errors
-			        //
-			        // set isError to false to avoid error logging in console
-                    alert("Bad Request Debug")
-			        evt.detail.shouldSwap = true;
-			        evt.detail.isError = false;
-			    } else if(evt.detail.xhr.status === 418){
-			        // if the response code 418 (I'm a teapot) is returned, retarget the
-			        // content of the response to the element with the id `teapot`s
-			        evt.detail.shouldSwap = true;
-			        evt.detail.target = htmx.find("#teapot");
-			    }
-			});
+			        if(evt.detail.xhr.status === 404){
+			            alert("Error: Could Not Find Resource");
+			        } else if(evt.detail.xhr.status === 422){
+			            alert("Bad Request Debug")
+			            evt.detail.shouldSwap = true;
+			            evt.detail.isError = false;
+			        } else if(evt.detail.xhr.status === 418){
+			            evt.detail.shouldSwap = true;
+			            evt.detail.target = htmx.find("#teapot");
+			        }
+			    });
 			</script>
 		</body>
 	</html>
