--- a/views/home/home.templ
+++ b/views/home/home.templ
@@ -10,7 +10,7 @@ templ HomeComponent() {
 		</div>
 		<ul id="list" class="text-gray-500 flex flex-col gap-4 py-2" role="listbox" aria-activedescendant="item1">
 			<li tabindex="0" id="item1" number="1" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 1. hi my name harish gokul. this is my vs code themed vim editor (ikik)</span>
+				<span class="px-4"># 1. hi my name harish gokul. I use neovim btw. I have ditched VSCode now</span>
 			</li>
 			<li tabindex="0" id="item2" number="2" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
 				<span class="px-4"># 2. hit "i" to get into insert mode.</span>
