--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -24,7 +24,7 @@ templ Base(title string) {
 		</head>
 		<body hx-boost="true" class="dark:bg-terminal-base font-mono text-white leading-normal tracking-tighter">
 			<div id="layout" class="w-full min-h-screen bg-terminal-base flex flex-col">
-				<header class="bg-primary-500 flex flex-row justify-between items-center">
+				<header class="flex flex-row justify-between items-center p-4">
 					<div class="flex space-x-4">
 						<button hx-get="/" hx-target="body" hx-swap="innerHTML transition:true" class="text-white font-bold tracking-tight btn btn-ghost hover:bg-primary-400">home</button>
 						<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary-400">readme</button>
@@ -45,7 +45,7 @@ templ Base(title string) {
 						<input name="command" id="commandBox" type="text" autocomplete="off" placeholder="$ enter command here" class="w-full px-4 border-none focus:ring-transparent text-white leading-tight bg-transparent"/>
 					</form>
 				</div>
-				<footer class="bg-primary-500 flex md:flex-row justify-between items-center">
+				<footer class="flex md:flex-row justify-between items-center">
 					<div class="flex md:flex-row sm:space-y-0 md:space-x-4">
 						<span id="currentText" class="bg-secondary-500 text-white px-2 text-sm">home.txt</span>
 						<span id="spinner" class="loading loading-infinity loading-sm htmx-indicator"></span>
